--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,12 @@
             <artifactId>flink-table-api-scala-bridge_2.11</artifactId>
             <version>1.10.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-runtime-web_2.11</artifactId>
+            <version>1.10.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
